--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,17 @@
 body {
-margin:0;
-font-family: sans-serif;
-font-size:16px;
+    margin:0;
+    font-family: sans-serif;
+    font-size:16px;
 }
 
 p{
-line-height:1.6;
-font-size:1.05rem;
-margin:20px 0;
+    line-height:1.6;
+    font-size:1.05rem;
+    margin:20px 0;
 }
 
 strong{
-font-weight:bold;
+    font-weight:bold;
 }
 
 h1,
@@ -20,37 +20,36 @@ h3,
 h4,
 h5,
 h6,{
-color:#1b5848;
-font-weight: normal;
+    color:#1b5848;
+    font-weight: normal;
 }
 
 .section{
-width: 100%;
-text-align: center;
-background:#ffffff;
+    width: 100%;
+    text-align: center;
+    background:#ffffff;
 }
 
-.sectionn--dark{
-background:#1b4848;
-color:#ffffff;
+.section--dark{
+    background:#1b4848;
+    color:#ffffff;
 }
 .section__content{
-max-width: 1000px;
-margin: 0 auto;
-padding:30px;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding:30px;
 }
 .banner{
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .banner__logo{
-height: 50px;
-display:block;
+    height: 50px;
+    display:block;
 }
 
 #hero{
-height:500px;
-background: url("../images/landing.jpg")
-background-size:cover;
+    height:500px;
+    background-size:cover;
 }
