--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,17 @@
 body {
-    margin:0;
+    margin: 0;
     font-family: sans-serif;
-    font-size:16px;
+    font-size: 16px;
 }
 
-p{
-    line-height:1.6;
-    font-size:1.05rem;
-    margin:20px 0;
+p {
+    line-height: 1.6;
+    font-size: 1.05rem;
+    margin: 20px 0;
 }
 
-strong{
-    font-weight:bold;
+strong {
+    font-weight: bold;
 }
 
 h1,
@@ -19,37 +19,105 @@ h2,
 h3,
 h4,
 h5,
-h6,{
-    color:#1b5848;
+h6 {
+    color: #1b5848;
     font-weight: normal;
 }
 
-.section{
+.section {
     width: 100%;
     text-align: center;
-    background:#ffffff;
+    background: #ffffff;
 }
 
-.section--dark{
-    background:#1b4848;
-    color:#ffffff;
+.section--dark {
+    background: #1b4848;
+    color: #ffffff;
 }
-.section__content{
+
+.section__content {
     max-width: 1000px;
     margin: 0 auto;
-    padding:30px;
+    padding: 30px;
 }
-.banner{
+
+.white__p {
+    color: #ffffff !important;
+}
+
+.section__content p {
+    color: #4d5156;
+}
+
+.banner {
     display: flex;
     justify-content: space-between;
 }
 
-.banner__logo{
+.banner__logo {
     height: 50px;
-    display:block;
+    display: block;
 }
 
-#hero{
-    height:500px;
-    background-size:cover;
+#hero {
+    height: 500px;
+    background-size: cover;
+}
+
+.ctabox {
+    margin: 100px 0;
+    max-width: 500px;
+    text-align: left;
+    font-size: 1rem; /* Fixed the font-size unit */
+}
+
+.ctabox__heading {
+    color: #ffffff; /* Added a missing semicolon */
+    font-size: 3.2em;
+    margin-top: 0;
+}
+
+.ctabox__content p {
+    font-size: 1.5em;
+}
+
+.button {
+    display: inline-block;
+    padding: 8px 18px;
+    color: #1b4848;
+    background: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px solid #1b4848;
+    border-radius: 5px;
+    transition: color 0.15s, border-color 0.15s; /* Fixed the transition property value */
+}
+
+.button:hover {
+    color: #ffffff;
+    border-color: #ffffff;
+    background: #1b4848;
+}
+
+.button i {
+    margin-left: 10px;
+}
+
+.icongroup {
+    display: flex;
+    align-items: center;
+}
+
+.icongroup__icon {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1.75rem; /* Fixed the font-size unit */
+}
+
+.icongroup__icon:not(:last-child) {
+    margin-right: 15px;
+}
+
+.icongroup__icon:hover {
+    color: #1b4848;
 }
